--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Kasvina Tirumal
-logo: 
+logo: /assets/img/headshot.jpg
 #description: text below image
 show_downloads: true
 theme: jekyll-theme-minimal
