--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Kasvina Tirumal
 logo: /assets/img/headshot.jpg
-#description: text below image
-show_downloads: true
+description: Seattle, WA | kasvina@uw.edu | [LinkedIn](https://www.linkedin.com/in/kasvina/) 
+show_downloads: false
 theme: jekyll-theme-minimal
