--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Kasvina Tirumal
 logo: /assets/img/headshot.png
-description: Email: kasvina@uw.edu or kasvina22@gmail.com
+description: kasvina@uw.edu or kasvina22@gmail.com
 show_downloads: false
 theme: jekyll-theme-minimal
