--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Kasvina Tirumal
-logo: /assets/img/headshot_fin.png
+logo: /assets/img/headshot_fin.png # 3x3
 description: kasvina@uw.edu or kasvina22@gmail.com
 show_downloads: false
 theme: jekyll-theme-minimal
