--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Kasvina Tirumal
-logo: /assets/img/headshot.png # height = 2.43inch
+logo: /assets/img/headshot.png # 1x1 inch
 description: kasvina@uw.edu or kasvina22@gmail.com
 show_downloads: false
 theme: jekyll-theme-minimal
